# ritide

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  docker.sh
src/: main.rs
static/css/: site.css
templates/: base.html  home.html  macros.html
