
[package]
name = "ritide"
version = "0.0.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = "0.3"
reqwest = {version = "0.11", features = ["json"]}
tracing-subscriber = "0.2"
tracing = "0.1"

chrono = {version =  "0.4", features = ["serde"]}
lazy_static = "1"
serde = { version = "1", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
dotenv = "0.15"
async-rwlock = "1"
tera = "1"
